--- a/2nd.css
+++ b/2nd.css
@@ -1,3 +1,7 @@
+* {
+  list-style: none;
+}
+
 .header {
   text-align: center;
   background-color: lightgrey;
@@ -15,4 +19,14 @@ img {
   max-width: 100%;
   height: auto;
   margin: 0 auto
+}
+
+#tribute {
+display: flex;
+  margin: auto;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width:100%;
+  max-width: 290;
 }
